--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,10 @@
 *
 # except these files...
 !.gitignore
-!*.py
-!*.jl
-!*.sh
-!*.ipynb
-!*.r
-!*.json
-!*.md
+!**/*.py
+!**/*.jl
+!**/*.sh
+!**/*.ipynb
+!**/*.r
+!**/*.json
+!**/*.md
